[package]
name = "l75"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merge_alt"
path = "src/merge_alt.rs"

[[bin]]
name = "greates_div"
path = "src/greates_div.rs"

[[bin]]
name = "kids_candies"
path = "src/kids_candies.rs"

[[bin]]
name = "place_flowers"
path = "src/place_flowers.rs"

[[bin]]
name = "reverse_vowels"
path = "src/reverse_vowels.rs"

[[bin]]
name = "reverse_words"
path = "src/reverse_words.rs"

[[bin]]
name = "product_array"
path = "src/product_array.rs"

[[bin]]
name = "icreasing_triplet"
path = "src/icreasing_triplet.rs"

[[bin]]
name = "string_compress"
path = "src/string_compress.rs"

[[bin]]
name = "move_zeroes"
path = "src/move_zeroes.rs"

[[bin]]
name = "is_subsequence"
path = "src/is_subsequence.rs"

[[bin]]
name = "most_water"
path = "src/most_water.rs"

[[bin]]
name = "max_operations"
path = "src/max_operations.rs"

[[bin]]
name = "max_average"
path = "src/max_average.rs"

[[bin]]
name = "max_vowels"
path = "src/max_vowels.rs"

[[bin]]
name = "max_ones"
path = "src/max_ones.rs"

[[bin]]
name = "longest_after_delete"
path = "src/longest_after_delete.rs"

[[bin]]
name = "highest_altitude"
path = "src/highest_altitude.rs"

[dependencies]
