[package]
name = "l75"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }

[[bin]]
name = "merge_alt"
path = "src/merge_alt.rs"

[[bin]]
name = "greates_div"
path = "src/greates_div.rs"

[[bin]]
name = "kids_candies"
path = "src/kids_candies.rs"

[[bin]]
name = "place_flowers"
path = "src/place_flowers.rs"

[[bin]]
name = "reverse_vowels"
path = "src/reverse_vowels.rs"

[[bin]]
name = "reverse_words"
path = "src/reverse_words.rs"

[[bin]]
name = "product_array"
path = "src/product_array.rs"

[[bin]]
name = "icreasing_triplet"
path = "src/icreasing_triplet.rs"

[[bin]]
name = "string_compress"
path = "src/string_compress.rs"

[[bin]]
name = "move_zeroes"
path = "src/move_zeroes.rs"

[[bin]]
name = "is_subsequence"
path = "src/is_subsequence.rs"

[[bin]]
name = "most_water"
path = "src/most_water.rs"

[[bin]]
name = "max_operations"
path = "src/max_operations.rs"

[[bin]]
name = "max_average"
path = "src/max_average.rs"

[[bin]]
name = "max_vowels"
path = "src/max_vowels.rs"

[[bin]]
name = "max_ones"
path = "src/max_ones.rs"

[[bin]]
name = "longest_after_delete"
path = "src/longest_after_delete.rs"

[[bin]]
name = "highest_altitude"
path = "src/highest_altitude.rs"

[[bin]]
name = "pivot_index"
path = "src/pivot_index.rs"

[[bin]]
name = "find_difference"
path = "src/find_difference.rs"

[[bin]]
name = "unique_occurrences"
path = "src/unique_occurrences.rs"

[[bin]]
name = "close_string"
path = "src/close_string.rs"

[[bin]]
name = "equal_pairs"
path = "src/equal_pairs.rs"

[[bin]]
name = "remove_stars"
path = "src/remove_stars.rs"

[[bin]]
name = "asteroid_collision"
path = "src/asteroid_collision.rs"

[[bin]]
name = "decode_string"
path = "src/decode_string.rs"

[[bin]]
name = "recent_calls"
path = "src/recent_calls.rs"

[[bin]]
name = "dota2_senate"
path = "src/dota2_senate.rs"

[[bin]]
name = "delete_middle_node"
path = "src/delete_middle_node.rs"

[[bin]]
name = "odd_even_list"
path = "src/odd_even_list.rs"

[[bin]]
name = "reverse_list"
path = "src/reverse_list.rs"

[[bin]]
name = "max_twins_sum"
path = "src/max_twins_sum.rs"

[[bin]]
name = "max_depth_bt"
path = "src/max_depth_bt.rs"

[[bin]]
name = "leaf_similar_bt"
path = "src/leaf_similar_bt.rs"

[[bin]]
name = "good_nodes"
path = "src/good_nodes.rs"

[[bin]]
name = "path_sum_3"
path = "src/path_sum_3.rs"

[[bin]]
name = "longest_zig_zag"
path = "src/longest_zig_zag.rs"

[[bin]]
name = "lowest_common_ancestor"
path = "src/lowest_common_ancestor.rs"

[[bin]]
name = "right_side_view"
path = "src/right_side_view.rs"

[[bin]]
name = "max_level_sum"
path = "src/max_level_sum.rs"

[[bin]]
name = "search_bst"
path = "src/search_bst.rs"

[[bin]]
name = "delete_node_bst"
path = "src/delete_node_bst.rs"

[[bin]]
name = "can_visit_all_rooms"
path = "src/can_visit_all_rooms.rs"

[[bin]]
name = "find_circle_sum"
path = "src/find_circle_sum.rs"

[[bin]]
name = "min_reorder"
path = "src/min_reorder.rs"

[[bin]]
name = "calc_equation"
path = "src/calc_equation.rs"

[[bin]]
name = "nearest_exit"
path = "src/nearest_exit.rs"

[[bin]]
name = "oranges_rotting"
path = "src/oranges_rotting.rs"

[[bin]]
name = "find_kth_largest"
path = "src/find_kth_largest.rs"

[[bin]]
name = "smallest_infinite_set"
path = "src/smallest_infinite_set.rs"

[[bin]]
name = "max_score"
path = "src/max_score.rs"

[[bin]]
name = "total_cost"
path = "src/total_cost.rs"

[[bin]]
name = "guess_number"
path = "src/guess_number.rs"

[[bin]]
name = "successful_pairs"
path = "src/successful_pairs.rs"

[[bin]]
name = "find_peak_element"
path = "src/find_peak_element.rs"

[[bin]]
name = "min_eating_speed"
path = "src/min_eating_speed.rs"

[[bin]]
name = "letter_combinations"
path = "src/letter_combinations.rs"

[[bin]]
name = "combination_sum3"
path = "src/combination_sum3.rs"

[[bin]]
name = "tribonacci"
path = "src/tribonacci.rs"

[[bin]]
name = "min_cost_climbing_stairs"
path = "src/min_cost_climbing_stairs.rs"

[[bin]]
name = "rob"
path = "src/rob.rs"

[[bin]]
name = "num_tilings"
path = "src/num_tilings.rs"

[[bin]]
name = "unique_paths"
path = "src/unique_paths.rs"

[[bin]]
name = "longest_common_subsequence"
path = "src/longest_common_subsequence.rs"

[[bin]]
name = "max_profit"
path = "src/max_profit.rs"

[[bin]]
name = "edit_distance"
path = "src/edit_distance.rs"

[[bin]]
name = "count_bits"
path = "src/count_bits.rs"

[[bin]]
name = "single_number"
path = "src/single_number.rs"

[[bin]]
name = "min_flips"
path = "src/min_flips.rs"

[[bin]]
name = "trie"
path = "src/trie.rs"

[[bin]]
name = "suggested_products"
path = "src/suggested_products.rs"

[[bin]]
name = "erase_overlap_intervals"
path = "src/erase_overlap_intervals.rs"
