[package]
name = "top100"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "letter_combinations"
path = "src/letter_combinations.rs"

[[bin]]
name = "generate_parenthesis"
path = "src/generate_parenthesis.rs"

[[bin]]
name = "combination_sum"
path = "src/combination_sum.rs"

[[bin]]
name = "permutations"
path = "src/permutations.rs"

[[bin]]
name = "solve_n_queens"
path = "src/solve_n_queens.rs"

[[bin]]
name = "subsets"
path = "src/subsets.rs"

[dependencies]
