[package]
name = "top100"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "letter_combinations"
path = "src/letter_combinations.rs"

[[bin]]
name = "generate_parenthesis"
path = "src/generate_parenthesis.rs"

[[bin]]
name = "combination_sum"
path = "src/combination_sum.rs"

[[bin]]
name = "permutations"
path = "src/permutations.rs"

[[bin]]
name = "solve_n_queens"
path = "src/solve_n_queens.rs"

[[bin]]
name = "subsets"
path = "src/subsets.rs"

[[bin]]
name = "word_search"
path = "src/word_search.rs"

[[bin]]
name = "partition"
path = "src/partition.rs"

[[bin]]
name = "search_insert"
path = "src/search_insert.rs"

[[bin]]
name = "find_median_sorted_arrays"
path = "src/find_median_sorted_arrays.rs"

[[bin]]
name = "search_rotated"
path = "src/search_rotated.rs"

[[bin]]
name = "search_range"
path = "src/search_range.rs"

[dependencies]
