[package]
name = "top100"
version = "0.1.0"
edition = "2021"

[dependencies]
common_lib = { path = "../common_lib" }

[[bin]]
name = "letter_combinations"
path = "src/letter_combinations.rs"

[[bin]]
name = "generate_parenthesis"
path = "src/generate_parenthesis.rs"

[[bin]]
name = "combination_sum"
path = "src/combination_sum.rs"

[[bin]]
name = "permutations"
path = "src/permutations.rs"

[[bin]]
name = "solve_n_queens"
path = "src/solve_n_queens.rs"

[[bin]]
name = "subsets"
path = "src/subsets.rs"

[[bin]]
name = "word_search"
path = "src/word_search.rs"

[[bin]]
name = "partition"
path = "src/partition.rs"

[[bin]]
name = "search_insert"
path = "src/search_insert.rs"

[[bin]]
name = "find_median_sorted_arrays"
path = "src/find_median_sorted_arrays.rs"

[[bin]]
name = "search_rotated"
path = "src/search_rotated.rs"

[[bin]]
name = "search_range"
path = "src/search_range.rs"

[[bin]]
name = "search_matrix"
path = "src/search_matrix.rs"

[[bin]]
name = "find_min"
path = "src/find_min.rs"

[[bin]]
name = "inorder_traversal"
path = "src/inorder_traversal.rs"

[[bin]]
name = "is_valid_bst"
path = "src/is_valid_bst.rs"

[[bin]]
name = "is_symmetric"
path = "src/is_symmetric.rs"

[[bin]]
name = "level_order"
path = "src/level_order.rs"

[[bin]]
name = "max_depth"
path = "src/max_depth.rs"

[[bin]]
name = "build_tree"
path = "src/build_tree.rs"

[[bin]]
name = "sorted_array_to_bst"
path = "src/sorted_array_to_bst.rs"

[[bin]]
name = "flatten"
path = "src/flatten.rs"

[[bin]]
name = "right_side_view"
path = "src/right_side_view.rs"

[[bin]]
name = "invert_tree"
path = "src/invert_tree.rs"

[[bin]]
name = "kth_smallest"
path = "src/kth_smallest.rs"

[[bin]]
name = "diameter_of_binary_tree"
path = "src/diameter_of_binary_tree.rs"
